--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -11,4 +11,126 @@
   	<module>blog-common</module>
   	<module>blog-admin</module>
   </modules>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <org.springframework.version>4.2.0.RELEASE</org.springframework.version>
+    <org.apache.shiro.version>1.2.4</org.apache.shiro.version>
+  </properties>
+  
+  <dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.20</version>
+		</dependency>
+		
+		
+		<!-- spring -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+	
+		<dependency>  
+			<groupId>org.springframework</groupId>  
+			<artifactId>spring-core</artifactId>  
+			<version>${org.springframework.version}</version>  
+		</dependency>
+     
+		<dependency>  
+			<groupId>org.springframework</groupId>  
+			<artifactId>spring-expression</artifactId>  
+			<version>${org.springframework.version}</version>  
+		</dependency>
+     
+		<dependency>  
+			<groupId>org.springframework</groupId>  
+			<artifactId>spring-beans</artifactId>  
+			<version>${org.springframework.version}</version>  
+		</dependency> 
+
+		<dependency>  
+			<groupId>org.springframework</groupId>  
+			<artifactId>spring-context</artifactId>  
+			<version>${org.springframework.version}</version>  
+		</dependency> 
+
+
+		<dependency>  
+			<groupId>org.springframework</groupId>  
+			<artifactId>spring-context-support</artifactId>  
+			<version>${org.springframework.version}</version>  
+		</dependency> 
+
+		<dependency>  
+			<groupId>org.springframework</groupId>  
+			<artifactId>spring-tx</artifactId>  
+			<version>${org.springframework.version}</version>  
+		</dependency> 
+
+		<dependency>  
+			<groupId>org.springframework</groupId>  
+			<artifactId>spring-jdbc</artifactId>  
+			<version>${org.springframework.version}</version>  
+		</dependency>
+        
+		<dependency>  
+			<groupId>org.springframework</groupId>  
+			<artifactId>spring-webmvc</artifactId>  
+			<version>${org.springframework.version}</version>  
+		</dependency>
+     
+		<!-- shiro -->
+     
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+			<version>${org.apache.shiro.version}</version>
+		</dependency>
+     
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>${org.apache.shiro.version}</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-ehcache</artifactId>
+			<version>${org.apache.shiro.version}</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>${org.apache.shiro.version}</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.apache.shiro.tools</groupId>
+			<artifactId>shiro-tools-hasher</artifactId>
+			<version>${org.apache.shiro.version}</version>
+		</dependency>
+	
+	<!-- mybatis -->
+		<dependency>  
+			<groupId>org.mybatis</groupId>  
+			<artifactId>mybatis-spring</artifactId>  
+			<version>1.1.1</version>  
+     	</dependency>  
+
+		<dependency>  
+			<groupId>org.mybatis</groupId>  
+			<artifactId>mybatis</artifactId>  
+			<version>3.1.1</version>  
+		</dependency>
+  </dependencies>
 </project>
