--- a/blog/blog-admin/pom.xml
+++ b/blog/blog-admin/pom.xml
@@ -15,4 +15,28 @@
 			<version>${blog.version}</version>
 		</dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.0</version>
+		<configuration>
+			<port>8080</port>
+		</configuration>
+	  </plugin>
+    </plugins>
+  </build>
 </project>
