--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -25,6 +25,32 @@
 			<version>4.8</version>
 		</dependency>
 		
+		<!-- common  -->
+	
+		<dependency>  
+	         <groupId>commons-dbcp</groupId>  
+	         <artifactId>commons-dbcp</artifactId>  
+	         <version>1.4</version>  
+	     </dependency>  
+	
+	     <dependency>  
+	         <groupId>commons-pool</groupId>  
+	         <artifactId>commons-pool</artifactId>  
+	         <version>1.4</version>  
+	     </dependency>
+	     
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>jta</artifactId>
+			<version>1.1</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
