--- a/blog/blog-admin/pom.xml
+++ b/blog/blog-admin/pom.xml
@@ -14,8 +14,25 @@
 			<artifactId>blog-service</artifactId>
 			<version>${blog.version}</version>
 		</dependency>
+		<dependency>
+	      	<groupId>org.apache.openejb</groupId>
+	      	<artifactId>javaee-api</artifactId>
+	      	<version>5.0-1</version>
+	      	<scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	      	<groupId>javax.servlet</groupId>
+	      	<artifactId>jstl</artifactId>
+	      	<version>1.2</version>
+	      	<scope>runtime</scope>
+	    </dependency>
+	    <dependency>
+	      	<groupId>javax.servlet.jsp</groupId>
+	      	<artifactId>jsp-api</artifactId>
+	      	<version>2.1</version>
+	      	<scope>provided</scope>
+	    </dependency>
   </dependencies>
-  
   <build>
     <plugins>
       <plugin>
