--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -57,6 +57,31 @@
 			<version>5.1.20</version>
 		</dependency>
 		
+		<!-- log -->
+	    <dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+		
+		<dependency> 
+		    <groupId>ch.qos.logback</groupId> 
+		    <artifactId>logback-core</artifactId> 
+		    <version>1.1.7</version> 
+		</dependency> 
+		
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.7</version>
+		</dependency>
+		
 		
 		<!-- spring -->
 		<dependency>
@@ -146,7 +171,7 @@
 			<version>${org.apache.shiro.version}</version>
 		</dependency>
 	
-	<!-- mybatis -->
+		<!-- mybatis -->
 		<dependency>  
 			<groupId>org.mybatis</groupId>  
 			<artifactId>mybatis-spring</artifactId>  
