--- a/blog/blog-admin/src/main/webapp/WEB-INF/web.xml
+++ b/blog/blog-admin/src/main/webapp/WEB-INF/web.xml
@@ -37,14 +37,14 @@
   </servlet-mapping>
   
   
-  <!-- <filter>  
+  <filter>  
       <filter-name>adminShiroFilter</filter-name>  
       <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>  
   </filter>  
   <filter-mapping>  
       <filter-name>adminShiroFilter</filter-name>  
-      <url-pattern>/admin/*</url-pattern>  
-  </filter-mapping> -->
+      <url-pattern>/*</url-pattern>  
+  </filter-mapping>
   
   <!-- UTF-8 -->
   <filter>
